src/objects/ACCL__Product_Hierarchy__c.object
<CustomObject>
    <description>Relation from a product (Child_Product) to its parent. This relation is time framed.</description>
    <fields>
        <fullName>ACCL__Child_Product__c</fullName>
        <description>Reference to the child product.</description>
        <label>Child Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Parent Products</relationshipLabel>
        <relationshipName>Product_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product_Code__c</fullName>
        <formula>ACCL__Parent_Product__r.ACCL__Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product_Description__c</fullName>
        <formula>ACCL__Parent_Product__r.ACCL__Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the parent product</description>
        <label>Parent Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Child Products</relationshipLabel>
        <relationshipName>Product_Parent</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Structure_Type__c</fullName>
        <description>Specifies the structure type of the hierarchy.</description>
        <label>Structure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PHR-{00000000}</displayFormat>
        <label>Product Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Child_unequal_parent</fullName>
        <active>true</active>
        <description>Child product has to be different than the parent product</description>
        <errorConditionFormula>ACCL__Child_Product__c == ACCL__Parent_Product__c</errorConditionFormula>
        <errorMessage>Child and Parent Products cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Mandatory_StructureType_is_set</fullName>
        <active>true</active>
        <description>Enforces that the Hierarchy-StrucutureType is set in all cases</description>
        <errorConditionFormula>ISPICKVAL( ACCL__Structure_Type__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ACCL__Structure_Type__c</errorDisplayField>
        <errorMessage>Please select a Structure Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_and_Valid_Thru</fullName>
        <active>true</active>
        <description>Valid Thru must be greater or equal than valid from.</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Valid_Thru__c</errorDisplayField>
        <errorMessage>Valid From cannot be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>